--- a/src/main/webapp/WEB-INF/vm/layout/oa_layout.vm
+++ b/src/main/webapp/WEB-INF/vm/layout/oa_layout.vm
@@ -165,7 +165,21 @@
 
 			});
 
-
+            $.extend(true, $.fn.dataTable.defaults, {
+                "sPaginationType": "bootstrap",
+                "oLanguage": {
+                    "sEmptyTable": "无数据",
+                    "sProcessing": "正在获取数据，请稍后...",
+                    "oPaginate.sFirst": "第一页",
+                    "oPaginate.sLast": "最后一页",
+                    "oPaginate.sNext": "下一页",
+                    "oPaginate.sPrevious": "上一页",
+                    "sInfo": "本页 _START_ - _END_ , 共 _TOTAL_ 条记录",
+                    "sInfoEmpty": "本页 0 - 0 , 共 0 条记录",
+                    "sSearch": "搜索: ",
+                    "sLengthMenu": "共_MENU_记录"
+                }
+            });
 
 		</script>
 
