--- a/src/main/webapp/WEB-INF/vm/oa/apply_todo.vm
+++ b/src/main/webapp/WEB-INF/vm/oa/apply_todo.vm
@@ -11,16 +11,17 @@
         text-align: center;
     }
 
-
 </style>
 <div class="col-xs-12">
     <div class="form-group dash-button-group" style="margin-bottom: 0px; float: right;">
         <span class="input-icon input-icon-right">
-            <input class="date" id="date-from" type="text" style="width: 186px" onclick="showTime()" placeholder="申请日期..."/>
+            <input class="date" id="date-from" type="text" style="width: 186px" onclick="showTime()"
+                   placeholder="申请日期..."/>
             <i class="icon-calendar green"></i>
         </span>
         <span class="input-icon input-icon-right">
-            <input class="date" id="date-to" type="text" style="width: 186px" onclick="showTime()" placeholder="申请日期..."/>
+            <input class="date" id="date-to" type="text" style="width: 186px" onclick="showTime()"
+                   placeholder="申请日期..."/>
             <i class="icon-calendar green"></i>
         </span>
         <span class="input-icon input-icon-right">
@@ -33,24 +34,38 @@
         </button>
     </div>
 </div>
+
 <div class="row">
     <div class="col-xs-12">
-        <div class="table-header">
-            申请报销信息
+        <div class="col-xs-9">
+            <div class="widget-box">
+                <div class="widget-header header-color-blue" style="">
+                    <h5 class="bigger lighter"><i class="icon-time"></i>当前审批</h5>
+                </div>
+                <div class="widget-body">
+                    <table id="apply_todo"
+                           class="table table-striped table-bordered table-hover"></table>
+                </div>
+            </div>
+
         </div>
-        <div class="table-responsive" id="card_s">
-            <div id="ems_table_wrapper" class="dataTables_wrapper" role="grid">
-                <table id="apply_table" class="table table-striped table-bordered table-hover dataTable"
-                       aria-describedby="ems_table_info" style="width: 100%;">
-                </table>
+        <div class="col-xs-3">
+            <div class="widget-box">
+                <div class="widget-header header-color-blue">
+                    <h5 class="bigger lighter"><i class="icon-bar-chart"></i>详细信息</h5>
+                </div>
+                <div class="widget-body">
+                    <div id="todo-apply-details-list" class="widget-main"></div>
+                </div>
             </div>
         </div>
     </div>
 </div>
+
 <div id="dialog-confirm" class="hide">
     <form class="form-horizontal">
         <div id="edit-form">
-            <div id="edit_content" align="center">
+            <div id="edit_content">
             </div>
         </div>
     </form>
@@ -64,14 +79,16 @@
 </script>
 <script src="static/ace/js/jquery.dataTables.bootstrap.js">
 </script>
-<script src="static/js/my_apply_utils.js">
+<script src="static/js/apply_common.js">
+</script>
+<script src="static/js/all_common.js">
 </script>
 <script src="/oaengine/static/My97DatePicker/WdatePicker.js"></script>
 <script language=JavaScript>
 
     jQuery(function ($) {
         window.edit_form = $("#edit-form").html();
-        showInfo("oa/history");
+        showInfo("oa/todo", "apply_todo", "todo-apply-details-list", "审批过程中");
     });
     function showTime() {
         WdatePicker({dateFmt: 'yyyy-MM-dd HH:mm:ss'});
