--- a/src/main/webapp/WEB-INF/vm/oa/approve_history.vm
+++ b/src/main/webapp/WEB-INF/vm/oa/approve_history.vm
@@ -17,11 +17,13 @@
     <div class="col-xs-12">
         <div class="form-group dash-button-group" style="margin-bottom: 0px; float: right;">
         <span class="input-icon input-icon-right">
-            <input class="date" id="date-from" type="text" style="width: 186px" onclick="showTime()" placeholder="申请日期..."/>
+            <input class="date" id="date-from" type="text" style="width: 186px" onclick="showTime()"
+                   placeholder="申请日期..."/>
             <i class="icon-calendar green"></i>
         </span>
         <span class="input-icon input-icon-right">
-            <input class="date" id="date-to" type="text" style="width: 186px" onclick="showTime()" placeholder="申请日期..."/>
+            <input class="date" id="date-to" type="text" style="width: 186px" onclick="showTime()"
+                   placeholder="申请日期..."/>
             <i class="icon-calendar green"></i>
         </span>
         <span class="input-icon input-icon-right">
@@ -33,24 +35,36 @@
                 查询
             </button>
         </div>
-        <div class="col-xs-12">
-            <div id="approve-page" class="col-sm-12 widget-container-span ui-sortable">
-                <div class="widget-box transparent" style="opacity: 1; z-index: 0;">
-                    <div class="widget-body">
-                        <div class="widget-main no-padding-top no-padding-left no-padding-right">
-                            <div class="table-responsive">
-                                <table id="approve_history"
-                                       class="table table-striped table-bordered table-hover dataTable">
-                                </table>
-                            </div>
-                        </div>
-                    </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-xs-12">
+        <div class="col-xs-9">
+            <div class="widget-box">
+                <div class="widget-header header-color-blue" style="">
+                    <h5 class="bigger lighter"><i class="icon-time"></i>历史审批</h5>
+                </div>
+                <div class="widget-body no-padding-top no-padding-left no-padding-right">
+                    <table id="approve_history"
+                           class="table table-striped table-bordered table-hover"></table>
+                </div>
+            </div>
+
+        </div>
+        <div class="col-xs-3">
+            <div class="widget-box">
+                <div class="widget-header header-color-blue">
+                    <h5 class="bigger lighter"><i class="icon-bar-chart"></i>详细信息</h5>
+                </div>
+                <div class="widget-body">
+                    <div id="history-application-details-list" class="widget-main"></div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
+
+</div>
 <div id="dialog-confirm" class="hide">
     <form class="form-horizontal">
         <div id="edit-form">
@@ -69,7 +83,7 @@
 </script>
 <script src="static/js/dialog_common.js">
 </script>
-<script src="static/js/approve_common.js">
+<script src="static/js/all_common.js">
 </script>
 <script src="static/ace/js/jquery.dataTables.min.js">
 </script>
@@ -186,6 +200,9 @@
                     else {
                         e.data.oTable.$('tr.row_selected').removeClass('row_selected');
                         $(this).addClass('row_selected');
+                        var id = e.data.oTable.fnGetData(this)[1];
+                        showApproveHistoryDetailsList(id);
+
                     }
                 });
             },
@@ -213,6 +230,63 @@
 
     function showTime() {
         WdatePicker({dateFmt: 'yyyy-MM-dd HH:mm:ss'});
+    }
+
+    function showApproveHistoryDetailsList(id) {
+        if (id == undefined || id == '') {
+            $("#history-approve-details-list").html('');
+            return;
+        }
+        var params = {
+            "tableMap": {},
+            "flag": "",
+            "vars": {
+                formId: id
+            }
+        };
+        $.ajax({
+            "contentType": "application/json; charset=utf-8",
+            "url": "approve_info",
+            "type": "POST",
+            "data": JSON.stringify(params),
+            success: function (resp) {
+                if (resp.errorCode == 0) {
+                    if (resp.data.length != 0) {
+                        try {
+                            var details = resp.data;
+                            var html = '';
+                            html += __generateDetailHtml('当前审批状态', 'icon-eye-open', "审批完成");
+                            var len1 = details.length;
+                            for (var i = 0; i < len1; i++) {
+                                html += __generateDetailHtml('审批历史', 'icon-book', details[i]);
+                            }
+                            $("#history-approve-details-list").html(html);
+                        } catch (e) {
+                        }
+                    } else {
+                        $("#history-approve-details-list").html('无详细信息');
+                    }
+                } else {
+                    $("#history-approve-details-list").html(resp.errorMessage);
+                }
+            },
+            error: function (jqXHR, textStatus, errorThrown) {
+                showCommonNoticeDialog('网络错误', 'icon-warning-sign',
+                        generateNoticeMsg('网络错误，请刷新后重试!'), 300);
+            }
+        })
+    }
+    function toggleCheck(oTable) {
+        $('input', oTable.fnGetNodes()).unbind("click");
+        $('input', oTable.fnGetNodes()).on("click", function () {
+            $(this).prop('checked', this.checked);
+            $(this).attr('checked', this.checked);
+        });
+        $('#current-approve-table-select-all').unbind("click");
+        $('#current-approve-table-select-all').on("click", function () {
+            $('input', oTable.fnGetNodes()).prop('checked', this.checked);
+            $('input', oTable.fnGetNodes()).attr('checked', this.checked);
+        });
     }
 
 
