--- a/src/main/webapp/WEB-INF/vm/oa/approve_todo.vm
+++ b/src/main/webapp/WEB-INF/vm/oa/approve_todo.vm
@@ -62,17 +62,28 @@
             </div>
         </div>
     </div>
+</div>
+<div class="row">
     <div class="col-xs-12">
-        <div id="approve-page" class="col-sm-12 widget-container-span ui-sortable">
-            <div class="widget-box transparent" style="opacity: 1; z-index: 0;">
+        <div class="col-xs-9">
+            <div class="widget-box">
+                <div class="widget-header header-color-blue" style="">
+                    <h5 class="bigger lighter"><i class="icon-time"></i>当前审批</h5>
+                </div>
                 <div class="widget-body">
-                    <div class="widget-main no-padding-top no-padding-left no-padding-right">
-                        <div class="table-responsive">
-                            <table id="approve_todo"
-                                   class="table table-striped table-bordered table-hover dataTable">
-                            </table>
-                        </div>
-                    </div>
+                    <table id="approve_todo"
+                           class="table table-striped table-bordered table-hover"></table>
+                </div>
+            </div>
+
+        </div>
+        <div class="col-xs-3">
+            <div class="widget-box">
+                <div class="widget-header header-color-blue">
+                    <h5 class="bigger lighter"><i class="icon-bar-chart"></i>详细信息</h5>
+                </div>
+                <div class="widget-body">
+                    <div id="todo-approve-details-list" class="widget-main"></div>
                 </div>
             </div>
         </div>
@@ -98,6 +109,8 @@
 <script src="static/js/utils.js">
 </script>
 <script src="static/js/dialog_common.js">
+</script>
+<script src="static/js/all_common.js">
 </script>
 <script src="static/ace/js/jquery.dataTables.min.js">
 </script>
@@ -127,7 +140,7 @@
             {"sTitle": '申请部门', "sWidth": "120px", "sClass": "center"},
             {"sTitle": '申请时间', "sWidth": "150px", "sClass": "center"},
             {"sTitle": '金额', "sWidth": "150px", "sClass": "center"},
-            {"sTitle": 'taskId', "sWidth": "150px", "sClass": "center", "sVisible": "false"}];
+            {"sTitle": 'taskId', "sWidth": "150px", "sClass": "center", "bVisible": true}];
         var wh = $(window).height();
         var sY = (wh - 100) + 'px';
         var oTable = $(ex).dataTable({
@@ -245,6 +258,8 @@
                     else {
                         e.data.oTable.$('tr.row_selected').removeClass('row_selected');
                         $(this).addClass('row_selected');
+                        var id = e.data.oTable.fnGetData(this)[1];
+                        showApproveTodoDetailsList(id);
                     }
                 });
             },
@@ -267,9 +282,9 @@
                 modal: true,
                 width: dialog_width,
                 height: 200,
-//                title: '<div style="color: DodgerBlue; padding: 4px; height: 28px; font-size: 14px; font-weight: bold">' +
-//                '<li class="icon-user"></li> 同意理由</div>',
-                title: '同意理由',
+                title: '<div style="color: DodgerBlue; padding: 4px; height: 28px; font-size: 14px; font-weight: bold">' +
+                '<li class="icon-user"></li> 同意理由</div>',
+//                title: '同意理由',
                 title_html: true,
                 closeOnEscape: false,
                 open: function (event, ui) {
@@ -299,7 +314,7 @@
                                         }
                                     }
                                 }
-                                approveProxy(oTable, url, msg, "通过");
+                                approveProxy(oTable, url, msg, "审批通过");
                                 e.preventDefault(); //STOP default action
                                 $(this).dialog("close");
                             } catch (e) {
@@ -368,7 +383,7 @@
                                         }
                                     }
                                 }
-                                approveProxy(oTable, url, msg, "驳回");
+                                approveProxy(oTable, url, msg, "拒绝");
                                 e.preventDefault(); //STOP default action
                                 $(this).dialog("close");
                             } catch (e) {
@@ -435,7 +450,7 @@
                                         }
                                     }
                                 }
-                                approveProxy(oTable, url, msg, "驳回");
+                                approveProxy(oTable, url, msg, "退回");
                                 e.preventDefault(); //STOP default action
                                 $(this).dialog("close");
                             } catch (e) {
@@ -479,14 +494,14 @@
                 },
                 buttons: [
                     {
-                        id: "reject-msg-submit",
+                        id: "endorse-msg-submit",
                         text: "提交",
                         "class": "btn btn-primary btn-xs",
                         click: function (e) {
                             var Me = this;
                             enableCurrentApproveToolbarButton(false);
                             try {
-                                var this_form = $("#reject-msg-dialog").find("form");
+                                var this_form = $("#endorse-msg-dialog").find("form");
 
                                 var postData = this_form.serializeArray();
                                 var msg = "";
@@ -503,7 +518,7 @@
                                         }
                                     }
                                 }
-                                approveProxy(oTable, url, msg, "驳回");
+                                approveProxy(oTable, url, msg, "加签");
                                 e.preventDefault(); //STOP default action
                                 $(this).dialog("close");
                             } catch (e) {
@@ -537,8 +552,11 @@
         $("input:checked", oTable.fnGetNodes()).each(function () {
             var row = $(this).parent().parent().parent();
             var nTds = $('td', row);
+            console.log(nTds);
             var formId = nTds[1].childNodes[0].data;
             var taskId = nTds[6].childNodes[0].data;
+            console.log(formId);
+            console.log(taskId);
             formIds += formId + ",";
             taskIds += taskId + ",";
         });
@@ -575,7 +593,7 @@
                 try {
                     if (resp.errorCode == 0) {
                         title_html_str = '<div class="dialog_title"><li class="icon-info-sign"></li> 审批' + action + '</div>';
-                        var succeed_html = '<b><li class="icon-check"></li> 审批' + action + '成功</b><br/>';
+                        var succeed_html = '<b><li class="icon-check"></li> ' + action + '成功</b><br/>';
                         $("#approve-result-dialog").append(generateNoticeMsg(succeed_html));
                     } else {
                         title_html_str = '<div class="dialog_title"><li class="icon-exclamation-sign"></li>审批' + action + '</div>';
@@ -706,6 +724,53 @@
     function showTime() {
         WdatePicker({dateFmt: 'yyyy-MM-dd HH:mm:ss'});
     }
+
+    function showApproveTodoDetailsList(id) {
+        if (id == undefined || id == '') {
+            $("#todo-approve-details-list").html('');
+            return;
+        }
+        var params = {
+            "tableMap":{},
+            "flag" :"",
+            "vars":{
+                formId:id
+            }
+        };
+        $.ajax({
+            "contentType": "application/json; charset=utf-8",
+            "url": "approve_info",
+            "type": "POST",
+            "data":JSON.stringify(params),
+            success: function(resp) {
+                if (resp.errorCode == "0") {
+                    if (resp.data.length != 0) {
+                        try {
+                            var details = resp.data;
+                            var html = '';
+                            html += __generateDetailHtml('当前审批状态', 'icon-eye-open', ["审批完成"]);
+                            var len1 = details.length;
+                            for(var i = 0; i < len1; i++){
+                                html += __generateDetailHtml('审批历史', 'icon-book', details[i]);
+                            }
+                            console.log(html)
+                            $("#todo-approve-details-list").html(html);
+                        } catch (e) {
+                        }
+                    } else {
+                        $("#todo-approve-details-list").html('无详细信息');
+                    }
+                } else {
+                    $("#todo-approve-details-list").html(resp.errorMessage);
+                }
+            },
+            error: function(jqXHR, textStatus, errorThrown) {
+                showCommonNoticeDialog('网络错误', 'icon-warning-sign',
+                        generateNoticeMsg('网络错误，请刷新后重试!'), 300);
+            }
+        })
+    }
+
 
 
 </script>
