--- a/src/main/webapp/WEB-INF/vm/oa/approve_history.vm
+++ b/src/main/webapp/WEB-INF/vm/oa/approve_history.vm
@@ -106,13 +106,13 @@
             $(ex).dataTable().fnDestroy();
         }
         var aoColumns = [
-            {"sTitle": 'ID', "sWidth": "120px", "sClass": "center"},
-            {"sTitle": '申请人', "sWidth": "120px", "sClass": "center"},
+            {"sTitle": 'ID', "sClass": "center"},
+            {"sTitle": '申请人', "sClass": "center"},
             {"sTitle": '申请部门', "sWidth": "120px", "sClass": "center"},
-            {"sTitle": '申请时间', "sWidth": "150px", "sClass": "center"},
-            {"sTitle": '处理时间', "sWidth": "120px", "sClass": "center"},
-            {"sTitle": '金额', "sWidth": "150px", "sClass": "center"},
-            {"sTitle": "报销详情", "sWidth": "100px", "sClass": "center"}]
+            {"sTitle": '申请时间', "sClass": "center"},
+            {"sTitle": '处理时间', "sClass": "center"},
+            {"sTitle": '金额', "sClass": "center"},
+            {"sTitle": "报销详情", "sClass": "center"}]
         var wh = $(window).height();
         var sY = (wh - 100) + 'px';
         var oTable = $(ex).dataTable({
