--- a/src/main/webapp/WEB-INF/vm/oa/approve_history.vm
+++ b/src/main/webapp/WEB-INF/vm/oa/approve_history.vm
@@ -112,7 +112,8 @@
             {"sTitle": '申请时间', "sClass": "center"},
             {"sTitle": '处理时间', "sClass": "center"},
             {"sTitle": '金额', "sClass": "center"},
-            {"sTitle": "报销详情", "sClass": "center"}]
+            {"sTitle": "报销详情", "sClass": "center"},
+            {"sTitle": "动作", "sClass": "center"}]
         var wh = $(window).height();
         var sY = (wh - 100) + 'px';
         var oTable = $(ex).dataTable({
@@ -231,7 +232,9 @@
             var tempVar = JSON.stringify(varsList[i]);
             var map = $.parseStr("<a href='javascript:void(0);' " +
             "onclick='showEditDialog(%s,%s);'><i class='icon-link'></i></a>", tempMap, tempVar);
-            aaData.push([needData[i][0], needData[i][1], needData[i][2], needData[i][3], needData[i][4], money.toFixed(2), map]);
+            var push = '<a href="javascript:void(0);" role="button" ' +
+                    'onclick="restartForm(\'' + needData[i][0] + '\')" class="green"><i class="icon-user">重新发起</i></a>';
+            aaData.push([needData[i][0], needData[i][1], needData[i][2], needData[i][3], needData[i][4], money.toFixed(2), map, push]);
         }
         return aaData;
     }
@@ -294,6 +297,27 @@
         $('#current-approve-table-select-all').on("click", function () {
             $('input', oTable.fnGetNodes()).prop('checked', this.checked);
             $('input', oTable.fnGetNodes()).attr('checked', this.checked);
+        });
+    }
+
+    function restartForm(id){
+        console.log(id);
+        var params = {};
+        params["vars"] = {"formId":id};
+        params["tableMap"] = {};
+        params["flag"] = "";
+        $.ajax({
+            "contentType": "application/json; charset=utf-8",
+            "type": "POST",
+            "url": "restart_form",
+            "data": JSON.stringify(params),
+            "success": function (resp) {
+                console.log(resp);
+                showSuccessTips(resp.data);
+            },
+            error: function () {
+                showCommonNoticeDialog('网络错误', 'icon-bolt', generateNoticeMsg('网络错误，请刷新后重试!'), 300);
+            }
         });
     }
 
